tests/errors/intrinsics3.f90
program intrinsics3
    print *, ibclr(1, -2)
end program